--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,7 @@
 
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     font-family: Arial, Helvetica, sans-serif;
@@ -15,7 +18,7 @@ body{
     margin: auto;
     background-color: lavender;
     max-width: fit-content;
-    width: 100px;
+    
     padding: 30px;
   }
   
